# basic-data-engineering

./: de.ipynb  electronic-card-transactions-august-2021-csv-tables-lower-levelv2.csv  pyproject.toml
