[tool.poetry]
name = "de"
version = "0.1.0"
description = ""
authors = ["hensel"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyspark = "^3.1.2"
pandas = "^1.3.3"
plotly = "^5.3.1"
dash = "^2.0.0"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
ipython = "^7.27.0"
jupyterlab = "^3.1.12"
black = "^21.9b0"
mypy = "^0.910"
scikit-learn = "^0.24.2"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
